--- a/play/package.json
+++ b/play/package.json
@@ -7,13 +7,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@douluo-ui/components": "workspace:^0.0.5",
     "@element-plus/icons-vue": "^2.0.6",
     "vue": "^2.7.5"
   },
   "devDependencies": {
     "@vue/runtime-dom": "^3.2.37",
     "unplugin-vue2-script-setup": "^0.11.2",
-    "vite": "^3.0.0",
-    "vite-plugin-vue2": "^2.0.1"
+    "vite": "^2.9.14",
+    "vite-plugin-vue2": "^2.0.1",
+    "vue-template-compiler": "^2.7.4"
   }
 }
